--- a/index.css
+++ b/index.css
@@ -1,15 +1,34 @@
 /* Media Queries */
 @media screen and (max-width: 320px){
-  #hero_emailform {
+  #jumbo_emailform {
     right: 0 !important;
-    margin: 0 auto;
+    position: absolute;
+    /*May change when adding child elements */
     width: 280px !important;
+    /*May change when adding child elements */
     left: 50%;
     top: 55%;
     transform: translate(-50%, -50%);
+    margin-right: 0;
+    margin-top: 0 !important;
     /*Test for dots*/
     /* opacity: 50%; */
   }
+}
+
+#jumbo_title{
+  font-family: DINAlternate-Bold;
+  color: #FFFFFF;
+  text-align: left;
+  line-height: 50px;
+  font-size: 40px !important;
+  padding-left: 70px;
+  /* margin: 0; */
+  color: white; 
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 70px; 
+  z-index: 1;
+  display: inline-block;
 }
 
 
@@ -17,16 +36,16 @@
 /* End Media Queries */
 
 /* Selects SVG inside svg continer allowing for semi responsive svgs - WORKS */
-.svg-container svg {
+/* .svg-container svg {
   max-width: 100%;
   max-height: 100%;
-}
+} */
 
-#hero_emailform {
+#jumbo_emailform {
   background-color: white;
+  display: block;
   height: 500px;
   width: 300px;
-  position: absolute;
   float: right;
   right: 30px;
   border-radius: 23px;
@@ -35,4 +54,6 @@
   box-shadow: 0px 0px 17px -3px rgba(0, 0, 0, 0.75);
   max-width: 100%;
   max-height: 100%;
+  margin-top: 85px;
+  margin-right: 60px;
 }
