--- a/index.css
+++ b/index.css
@@ -1,39 +1,37 @@
-/* Media Queries */
-@media screen and (max-width: 320px){
-  #jumbo_emailform {
-    right: 0 !important;
-    position: absolute;
-    /*May change when adding child elements */
-    width: 280px !important;
-    /*May change when adding child elements */
-    left: 50%;
-    top: 55%;
-    transform: translate(-50%, -50%);
-    margin-right: 0;
-    margin-top: 0 !important;
-    /*Test for dots*/
-    /* opacity: 50%; */
-  }
+@font-face {
+  src: url('fonts/DIN-Alternate-Bold/DIN-Alternate-Bold.otf');
+  font-family: DINAlternate-Bold;
+}
+
+* {
+  font-family: DINAlternate-Bold !important;
+}
+
+.jumbotron{
+  background-image: linear-gradient(180deg, #00C9FF 0%, #00B1FF 50%, #0099FF 100%); 
+  height: 900px; 
+  position: relative; 
+  overflow: hidden; 
+  z-index: 1; 
+  max-width: 100%; 
+  max-height: 100%; 
+  margin-bottom: 0 !important; 
+  border-radius: 0 !important;
+  padding: 0;
 }
 
 #jumbo_title{
-  font-family: DINAlternate-Bold;
   color: #FFFFFF;
   text-align: left;
-  line-height: 50px;
-  font-size: 40px !important;
+  /* line-height: 50px; */
   padding-left: 70px;
   /* margin: 0; */
   color: white; 
   font-family: Arial, Helvetica, sans-serif; 
-  font-size: 70px; 
+  font-size: 40px; 
   z-index: 1;
-  display: inline-block;
+  /* display: inline-block; */
 }
-
-
-
-/* End Media Queries */
 
 /* Selects SVG inside svg continer allowing for semi responsive svgs - WORKS */
 /* .svg-container svg {
@@ -56,4 +54,52 @@
   max-height: 100%;
   margin-top: 85px;
   margin-right: 60px;
+  z-index: 9999;
 }
+
+
+
+
+
+/* Media Queries */
+@media only screen and (max-width: 320px){
+  #jumbo_emailform {
+    right: 0;
+    position: absolute;
+    /*May change when adding child elements */
+    width: 280px;
+    /*May change when adding child elements */
+    left: 50%;
+    top: 55%;
+    transform: translate(-50%, -50%);
+    margin-right: 0;
+    margin-top: 0;
+    bottom: 0;
+    /*Test for dots*/
+    /* opacity: 50%; */
+  }
+
+  .jumbotron {
+    height: 850px;
+  }
+
+  #jumbo_title {
+    color: rgb(255,255,255);
+    font-size: 28px;
+    /* line-height: 40px; */
+    font-style: normal;
+    letter-spacing: 0px;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+  }
+
+  
+}
+/* End Media Queries */
+
+/* FOR TABLET VIEW - Puts the email form above the title for accurate translation from design*/
+/* #jumbo_emailform {
+  z-index: 3;
+  margin-top: -65px;
+} */
