--- a/index.css
+++ b/index.css
@@ -7,6 +7,61 @@
   font-family: DINAlternate-Bold !important;
 }
 
+
+/* Lines of the Toggler */
+.toggler-icon {
+  width: 30px;
+  height: 3px;
+  background-color: white;
+
+  display: block;
+  transition: all 0.2s;
+}
+
+/* Adds Space between the lines */
+.middle-bar {
+  margin: 5px auto;
+}
+
+/* State when navbar is opened (START) */
+.navbar-toggler .top-bar {
+  transform: rotate(45deg);
+  transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+.navbar-toggler .bottom-bar {
+  transform: rotate(-45deg);
+  transform-origin: 10% 90%;
+}
+
+/* State when navbar is collapsed*/
+.navbar-toggler.collapsed .top-bar {
+  transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+  transform: rotate(0);
+}
+
+/* Color of Toggler when collapsed */
+.navbar-toggler.collapsed .toggler-icon {
+  background-color: white;
+}
+
+/* .navbar-toggler.collapsed{
+  border: 0 !important;
+} */
+
 .navbar-brand {
   color: white;
   font-size: 35px !important;
@@ -27,7 +82,31 @@
   border-radius: 10px;
 }
 
-.navbar-toggler-icon {
+.navbar-toggler-icon{
+  width: unset !important;
+  height: unset !important;
+  padding-right: 0 !important;
+  transition: all 0.2s;
+  
+}
+
+.navbar-toggler{
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
+  outline: 0 !important;
+}
+
+.collapsed{
+  border: 2px solid white !important;
+}
+
+/* .navbar-toggler.show{
+  border: 0 !important;
+} */
+
+/* .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
   color: white;
   border: 2px solid white !important;
@@ -51,11 +130,11 @@
 
 .navbar-toggler:focus {
   outline: none;
-}
+} */
 
 .jumbotron{
   background-image: linear-gradient(180deg, #00C9FF 0%, #00B1FF 50%, #0099FF 100%); 
-  height: 788px; 
+  height: 820px; 
   position: relative; 
   overflow: hidden; 
   z-index: 1; 
@@ -110,7 +189,9 @@
 
 
 /* Media Queries */
-@media only screen and (max-width: 320px){
+
+/* Mobile S - Mobile M */
+@media only screen and (max-width: 375px){
   #jumbo_emailform {
     right: 0;
     position: absolute;
@@ -139,11 +220,32 @@
     letter-spacing: 0px;
     text-align: center;
     padding: 0;
+    margin-top: 65px;
     /* margin: 0; */
   }
 
-  
+  .navbar-brand {
+    font-size: 20px !important;
+  }
+
+  .nav-link {
+    font-size: 18px;
+    background-color: rgba(0, 0, 0, .7);
+    padding-left: 10px !important;
+  }
+
+  .nav-link:hover {
+    background-color: rgba(0, 0, 0, .7);
+    border-radius: 0;
+  }
+
+  #nav-link__lastItem{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 }
+
+
 /* End Media Queries */
 
 /* FOR TABLET VIEW - Puts the email form above the title for accurate translation from design*/
