--- a/index.css
+++ b/index.css
@@ -247,10 +247,10 @@
     background-color: rgba(0, 0, 0, .7);
   }
 
-  /* .nav-link:hover {
+  .nav-link:hover {
     background-color: rgba(0, 0, 0, .7);
     border-radius: 0;
-  } */
+  }
 
   
 }
