--- a/index.css
+++ b/index.css
@@ -224,7 +224,7 @@
     top: 37%;
     transform: translate(-50%, -50%);
     position: absolute;
-    width: 270px;
+    width: 250px;
     height: 330px;
   }
 
@@ -251,13 +251,13 @@
 
   #jumbo_title {
     color: rgb(255,255,255);
-    font-size: 28px;
+    font-size: 26px;
     /* line-height: 40px; */
     font-style: normal;
     letter-spacing: 0px;
     text-align: center;
     padding: 0;
-    margin-top: 65px;
+    margin-top: 70px;
     /* margin: 0; */
   }
 
@@ -340,19 +340,17 @@
 
 /* Mobile L */ 
 @media only screen and (min-width: 425px){
-  .navbar-brand {
+  /* .navbar-brand {
     font-size: 25px !important;
-  }
+  } */
 
   #jumbo_title{
     margin-top: 75px;
     font-size: 32px !important;
   }
-
-  #jumbo_emailform{
-    width: 350px;
-  }
 }
+
+
 
 
 /* End Media Queries */
