--- a/index.css
+++ b/index.css
@@ -113,36 +113,6 @@ html{
   border-bottom-right-radius: 10px;
 }
 
-/* .navbar-toggler.show{
-  border: 0 !important;
-} */
-
-/* .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
-  color: white;
-  border: 2px solid white !important;
-}
-
-.navbar-toggler {
-  border-color: white;
-}
-
-.navbar-toggler:focus {
-  outline: none;
-}
-
-.navbar-toggler:hover {
-  border-color: white;
-}
-
-.navbar-toggler {
-  border-color: white;
-}
-
-.navbar-toggler:focus {
-  outline: none;
-} */
-
 .jumbotron{
   background-image: linear-gradient(180deg, #00C9FF 0%, #00B1FF 50%, #0099FF 100%); 
   height: 820px; 
@@ -256,13 +226,11 @@ html{
   #jumbo_title {
     color: rgb(255,255,255);
     font-size: 26px;
-    /* line-height: 40px; */
     font-style: normal;
     letter-spacing: 0px;
     text-align: center;
     padding: 0;
     margin-top: 70px;
-    /* margin: 0; */
   }
 
   .jumbotron{
@@ -324,11 +292,9 @@ html{
     font-size: 18px;
     background-color: white;
     color: #00C9FF;
-    /* background-color: rgba(0, 0, 0, .7); */
   }
 
   .nav-link:hover {
-    /* background-color: rgba(0, 0, 0, .7); */
     text-decoration: underline !important;
     text-decoration-color: #00C9FF !important;
     border-radius: 0;
@@ -403,10 +369,12 @@ html{
 }
 
 /* Laptop */
-@media only screen and (min-width: 992px){
-  
+@media only screen and (min-width: 970px){
+  .jumbotron{
+    height: 850px;
+  }
   .navbar-brand{
-    font-size: 28PX !important;
+    font-size: 28px !important;
   }
   
   .nav-link{
@@ -423,18 +391,55 @@ html{
 
   #jumbo_title{
     font-size: 45px !important;
+    margin-top: 120px;
   }
 
   #jumbo_emailform{
     width: 400px;
     height: 500px;
     left: 58%;
+    top: 19%;
   }
 
   #phone_image{
     margin-left: 7%;
   }
 }
+
+/* Laptop L */
+@media only screen and (min-width: 1440px){
+
+  .navbar-brand{
+    font-size: 40px !important;
+  }
+
+  .nav-link{
+    font-size: 30px;
+  }
+
+  .jumbotron{
+    height: 930px;
+  }
+
+  #jumbo_title{
+    font-size: 47px !important;
+    margin-top: 150px;
+  }
+
+  #jumbo_emailform{
+    width: 460px;
+    height: 700px;
+    left: 65%;
+    top: 11%;
+  }
+
+  #phone_image{
+    height: 550px;
+    width: 425px;
+    margin-left: 10%;
+  }
+}
+
 
 /* End Media Queries */
 
