--- a/index.css
+++ b/index.css
@@ -506,7 +506,6 @@ html{
 
 /* Mobile L */ 
 @media only screen and (min-width: 400px){
-
   #jumbo_title{
     margin-top: 75px;
     font-size: 32px !important;
@@ -522,7 +521,7 @@ html{
     top: 0;
     height: 460px;
     width: 340px;
-    left: 52%;
+    left: 54%;
     z-index: 3;
     top: 17%;
     transform: unset;
@@ -632,7 +631,7 @@ html{
 
   #jumbo_emailform{
     width: 400px;
-    height: 500px;
+    height: 470px;
     left: 58%;
     top: 19%;
   }
@@ -657,16 +656,51 @@ html{
     height: 930px;
   }
 
+  .jumboef--input{
+    width: 90%;
+    height: 10%;
+  }
+
+  .jumboef--input::placeholder{
+    font-size: 20px;
+  }
+
+  input[type="text"] {
+    font-size: 20px;
+}
+
+  #jumboef_inquiry{
+    width: 90%;
+    font-size: 20px;
+  }
+
+  #jumboef_inquiry::placeholder{
+    font-size: 20px;
+  }
+
   #jumbo_title{
     font-size: 47px !important;
     margin-top: 150px;
   }
 
+  #jumboef-title{
+    font-size: 1.8em;
+  }
+
+  #lead{
+    font-size: 1em;
+    padding: 0 20px 0 20px;
+  }
+
   #jumbo_emailform{
     width: 460px;
-    height: 700px;
+    height: 600px;
     left: 65%;
     top: 11%;
+  }
+
+  #jumboef_button{
+    font-size: 1.4em;
   }
 
   #phone_image{
