- Added media query for forbes logo to maintain correct height and width on viewports >tablet

--- a/index.css
+++ b/index.css
@@ -672,6 +672,10 @@ html{
   #about_section--text{
     padding-right: 0;
   }
+
+  #forbes_logo{
+    height: 60% !important;
+  }
 }
 
 /* Laptop */
