--- a/index.css
+++ b/index.css
@@ -701,6 +701,14 @@ html {
   #trusted_companies-banner{
     margin-top: 15% !important;
   }
+
+  #about_section--text p {
+    font-size: .55em !important;
+  }
+
+  #about_section--button {
+    font-size: .5em !important;
+  }
 }
 
 /* Laptop */
@@ -757,7 +765,7 @@ html {
   }
 
   #about_section--text p {
-    font-size: 1em !important;
+    font-size: .84em !important;
   }
 
   #about_section--subtitle {
@@ -766,7 +774,7 @@ html {
   }
 
   #about_section--button {
-    font-size: 1em !important;
+    font-size: .7em !important;
   }
 }
 
@@ -838,6 +846,28 @@ html {
     width: 425px;
     margin-left: 10%;
   }
+
+  #about_section--text p {
+    font-size: .98em !important;
+  }
+
+  #about_section--subtitle {
+    padding-top: 0;
+    font-size: 1.1em !important;
+  }
+
+  #about_section--button {
+    margin-top: 2%;
+    font-size: 1em !important;
+  }
+
+  #about_section--title h6{
+    font-size: 30px !important;
+  }
+
+  /* #ali_logo{
+    width: 20% !important;
+  } */
 }
 
 /* 4k */
