--- a/index.css
+++ b/index.css
@@ -12,6 +12,46 @@ html {
   scroll-behavior: smooth
 }
 
+.card{
+  border-left: 0 !important;
+  border-top: 0 !important;
+  border-bottom: 0 !important;
+  border-right: 0 !important;
+  border-radius: 0 !important;
+  /* padding-right: 20px; */
+}
+
+.card-body{
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  padding-top: 12px !important;
+}
+
+.card-text{
+  margin-bottom: 0;
+}
+
+.card-title{
+  font-size: .88em;
+  text-align: center;
+}
+
+.card-text .text-muted{
+  color: #0099FF !important;
+}
+
+.card-img-top{
+  width: 70% !important;
+  /* height: 50% !important; */
+}
+
+.border-left {
+  border-left: 2px solid #E5E5E5;
+  position: absolute;
+  top: 20%;
+  bottom: 30%;
+  right: -5%;
+}
 /* Lines of the Toggler */
 .toggler-icon {
   width: 30px;
@@ -356,7 +396,9 @@ html {
     padding-top: 4%;
   }
 
-
+  .border-left{
+    display: none;
+  }
 }
 
 
